SERVER-61529 Ldap tests should wait for connection reaper to be terminated

GitOrigin-RevId: 0b5d1e58532747c9a228c07725b9a903542715da