src/mongo/db/modules/enterprise/src/ldap/connections/ldap_connection_reaper.h
@@ -23,6 +23,8 @@ class LDAPConnectionReaper {
 public:
     LDAPConnectionReaper();
 
+    ~LDAPConnectionReaper();
+
     /**
      * Schedule the connection reaper to disconnect/unbind a LDAP session on a background thread if
      * multithreading is safe. Otherwise, it will disconnect inline.
